add_subdirectory(Common)

add_subdirectory(Components/AlgorithmAEB)
add_subdirectory(Components/Algorithm_AFDM)
add_subdirectory(Components/Algorithm_FmuWrapper)
add_subdirectory(Components/Algorithm_Lateral)
add_subdirectory(Components/Algorithm_Longitudinal)
add_subdirectory(Components/ComponentController)
add_subdirectory(Components/Dynamics_Collision)
add_subdirectory(Components/Dynamics_TrajectoryFollower)
add_subdirectory(Components/LimiterAccVehComp)
add_subdirectory(Components/OpenScenarioActions)
add_subdirectory(Components/SensorFusion_OSI)
add_subdirectory(Components/Sensor_Driver)
add_subdirectory(Components/Sensor_OSI)
add_subdirectory(Components/SignalPrioritizer)

add_subdirectory(CoreFramework/OpenPassSlave)

add_subdirectory(CoreModules/BasicDataStore)
add_subdirectory(CoreModules/EventDetector)
add_subdirectory(CoreModules/Observation_Log)
add_subdirectory(CoreModules/SpawnPointScenario_OSI)
add_subdirectory(CoreModules/SpawnPointWorldAnalyzer)
add_subdirectory(CoreModules/World_OSI)
