#/*******************************************************************************
#* Copyright (c) 2020 HLRS, University of Stuttgart
#*
#* This program and the accompanying materials are made
#* available under the terms of the Eclipse Public License 2.0
#* which is available at https://www.eclipse.org/legal/epl-2.0/
#*
#* SPDX-License-Identifier: EPL-2.0
#*******************************************************************************/

#ADD_SUBDIRECTORY(Action_BrakeLight_Basic)
ADD_SUBDIRECTORY(Action_LongitudinalDriver)
ADD_SUBDIRECTORY(Action_SecondaryDriverTasks)
ADD_SUBDIRECTORY(AgentUpdater)
ADD_SUBDIRECTORY(AlgorithmAgentFollowingDriverModel)
ADD_SUBDIRECTORY(Algorithm_AEB)
#ADD_SUBDIRECTORY(Algorithm_CruiseControlByDistance)
ADD_SUBDIRECTORY(Algorithm_Lateral)
ADD_SUBDIRECTORY(Algorithm_Longitudinal)
ADD_SUBDIRECTORY(ComponentController)
ADD_SUBDIRECTORY(Dynamics_Collision)
ADD_SUBDIRECTORY(Dynamics_Longitudinal_Basic)
ADD_SUBDIRECTORY(Dynamics_RegularDriving)
ADD_SUBDIRECTORY(Dynamics_TrajectoryFollower)
ADD_SUBDIRECTORY(LimiterAccelerationVehicleComponents)
ADD_SUBDIRECTORY(Parameters_Vehicle)
ADD_SUBDIRECTORY(SensorFusion_OSI)
#ADD_SUBDIRECTORY(Sensor_Distance)
ADD_SUBDIRECTORY(Sensor_Driver)
ADD_SUBDIRECTORY(Sensor_OSI)
ADD_SUBDIRECTORY(Sensor_RecordState)
ADD_SUBDIRECTORY(SignalPrioritizer)