#/*******************************************************************************
#* Copyright (c) 2020 HLRS, University of Stuttgart
#*
#* This program and the accompanying materials are made
#* available under the terms of the Eclipse Public License 2.0
#* which is available at https://www.eclipse.org/legal/epl-2.0/
#*
#* SPDX-License-Identifier: EPL-2.0
#*******************************************************************************/

include_directories("./" "CoreShare")
ADD_SUBDIRECTORY(CoreShare)
ADD_SUBDIRECTORY(OpenPassMaster)
ADD_SUBDIRECTORY(OpenPassSlave)
