#ADD_SUBDIRECTORY(CollisionDetection)
ADD_SUBDIRECTORY(EventDetector)
ADD_SUBDIRECTORY(Manipulator)
ADD_SUBDIRECTORY(Observation_Log)
ADD_SUBDIRECTORY(Observation_State)
#ADD_SUBDIRECTORY(Observation_Ttc)
ADD_SUBDIRECTORY(SpawnPoint_OSI)
#ADD_SUBDIRECTORY(SpawnPoint_Start)
ADD_SUBDIRECTORY(Stochastics)
#ADD_SUBDIRECTORY(World_Basic)
ADD_SUBDIRECTORY(World_OSI)