#/*******************************************************************************
#* Copyright (c) 2020 HLRS, University of Stuttgart
#*
#* This program and the accompanying materials are made
#* available under the terms of the Eclipse Public License 2.0
#* which is available at https://www.eclipse.org/legal/epl-2.0/
#*
#* SPDX-License-Identifier: EPL-2.0
#*******************************************************************************/

#ADD_SUBDIRECTORY(CollisionDetection)
ADD_SUBDIRECTORY(EventDetector)
ADD_SUBDIRECTORY(Manipulator)
ADD_SUBDIRECTORY(Observation_Log)
ADD_SUBDIRECTORY(Observation_State)
#ADD_SUBDIRECTORY(Observation_Ttc)
ADD_SUBDIRECTORY(SpawnPoint_OSI)
#ADD_SUBDIRECTORY(SpawnPoint_Start)
ADD_SUBDIRECTORY(Stochastics)
#ADD_SUBDIRECTORY(World_Basic)
ADD_SUBDIRECTORY(World_OSI)