SET (SOURCES AgentConfigurationPlugin.cpp 
			 Models/AgentConfigurationCombinationXMLBaseModel.cpp
			 Models/AgentConfigurationCombinationXMLSaveModel.cpp
			 Models/AgentConfigurationModel.cpp
			 Models/AgentConfigurationXMLBaseModel.cpp
			 Models/AgentConfigurationXMLLoadModel.cpp
			 Models/AgentConfigurationXMLSaveModel.cpp
			 Models/AgentItemModel.cpp
			 Models/AgentMapModel.cpp
			 Models/DriverProfileItemModel.cpp
			 Models/DriverProfileMapModel.cpp
			 Models/ParameterItemModel.cpp
			 Models/ParameterMapModel.cpp
			 Models/SensorItemModel.cpp
			 Models/SensorMapModel.cpp
			 Models/SensorProfileItemModel.cpp
			 Models/SensorProfileMapModel.cpp
			 Models/VehicleComponentItemModel.cpp
			 Models/VehicleComponentMapModel.cpp
			 Models/VehicleComponentProfileItemModel.cpp
			 Models/VehicleComponentProfileMapModel.cpp
			 Models/VehicleProfileItemModel.cpp
			 Models/VehicleProfileMapModel.cpp
			 #SystemModels/SubsystemInputConnectionItemModel.cpp
			 #SystemModels/SubsystemInputConnectionMapModel.cpp
			 #SystemModels/SubsystemInputItemModel.cpp
			 #SystemModels/SubsystemInputMapModel.cpp
			 #SystemModels/SubsystemItemModel.cpp
			 #SystemModels/SubsystemMapModel.cpp
			 #SystemModels/SubsystemOutputConnectionItemModel.cpp
			 #SystemModels/SubsystemOutputConnectionMapModel.cpp
			 #SystemModels/SubsystemOutputItemModel.cpp
			 #SystemModels/SubsystemOutputMapModel.cpp
			 #SystemModels/SubsystemParameterItemModel.cpp
			 #SystemModels/SubsystemParameterMapModel.cpp
			 #SystemModels/SystemComponentInputItemModel.cpp
			 #SystemModels/SystemComponentInputMapModel.cpp
			 #SystemModels/SystemComponentItemModel.cpp
			 #SystemModels/SystemComponentManagerModel.cpp
			 #SystemModels/SystemComponentMapModel.cpp
			 #SystemModels/SystemComponentOutputItemModel.cpp
			 #SystemModels/SystemComponentOutputMapModel.cpp
			 #SystemModels/SystemComponentParameterItemModel.cpp
			 #SystemModels/SystemComponentParameterMapModel.cpp
			 #SystemModels/SystemComponentScheduleModel.cpp
			 #SystemModels/SystemConnectionItemModel.cpp
			 #SystemModels/SystemConnectionMapModel.cpp
			 #SystemModels/SystemErrorModel.cpp
			 #SystemModels/SystemItemModel.cpp
			 #SystemModels/SystemMapModel.cpp
			 #SystemModels/SystemModel.cpp
			 #SystemModels/SystemXMLBaseModel.cpp
			 #SystemModels/SystemXMLLoadModel.cpp
			 #SystemModels/SystemXMLSaveModel.cpp
			 Presenters/AgentConfigurationCombinationPresenter.cpp
			 Presenters/AgentMapPresenter.cpp
			 Presenters/AgentConfigurationPresenter.cpp
			 Presenters/DriverProfilesMapPresenter.cpp
			 Presenters/DriverProfilesPresenter.cpp
			 Presenters/ParameterItemPresenter.cpp
			 Presenters/ParameterMapPresenter.cpp
			 Presenters/SystemProfilePresenter.cpp
			 Presenters/VehicleProfilesMapPresenter.cpp
			 Presenters/VehicleProfilesPresenter.cpp
			 Views/AgentConfigurationView.cpp
			 Views/AgentMapView.cpp
			 Views/DriverProfilesView.cpp
			 Views/ParameterItemView.cpp
			 Views/ProfileItemView.cpp
			 Views/SelectedSystemItemView.cpp
			 Views/SystemProfileView.cpp
			 Views/VehicleProfilesView.cpp
			 Views/WidgetView.cpp
			../Global/DelegateComboBoxView.cpp
			../Global/DelegateDoubleView.cpp
			../Global/DelegateTimeView.cpp
)
SET (HEADERS AgentConfigurationPlugin.h
			 Models/AgentConfigurationCombinationXMLBaseModel.h
			 Models/AgentConfigurationCombinationXMLSaveModel.h
			 Models/AgentConfigurationModel.h
			 Models/AgentConfigurationXMLBaseModel.h
			 Models/AgentConfigurationXMLLoadModel.h
			 Models/AgentConfigurationXMLSaveModel.h
			 Models/AgentItemModel.h
			 Models/AgentMapModel.h
			 Models/DriverProfileItemModel.h
			 Models/DriverProfileMapModel.h
			 Models/ParameterItemModel.h
			 Models/ParameterMapModel.h
			 Models/SensorItemModel.h
			 Models/SensorMapModel.h
			 Models/SensorProfileItemModel.h
			 Models/SensorProfileMapModel.h
			 Models/VehicleComponentItemModel.h
			 Models/VehicleComponentMapModel.h
			 Models/VehicleComponentProfileItemModel.h
			 Models/VehicleComponentProfileMapModel.h
			 Models/VehicleProfileItemModel.h
			 Models/VehicleProfileMapModel.h
			 #SystemModels/SubsystemInputConnectionItemModel.h
			 #SystemModels/SubsystemInputConnectionMapModel.h
			 #SystemModels/SubsystemInputItemModel.h
			 #SystemModels/SubsystemInputMapModel.h
			 #SystemModels/SubsystemItemModel.h
			 #SystemModels/SubsystemMapModel.h
			 #SystemModels/SubsystemOutputConnectionItemModel.h
			 #SystemModels/SubsystemOutputConnectionMapModel.h
			 #SystemModels/SubsystemOutputItemModel.h
			 #SystemModels/SubsystemOutputMapModel.h
			 #SystemModels/SubsystemParameterItemModel.h
			 #SystemModels/SubsystemParameterMapModel.h
			 #SystemModels/SystemComponentInputItemModel.h
			 #SystemModels/SystemComponentInputMapModel.h
			 #SystemModels/SystemComponentItemModel.h
			 #SystemModels/SystemComponentManagerModel.h
			 #SystemModels/SystemComponentMapModel.h
			 #SystemModels/SystemComponentOutputItemModel.h
			 #SystemModels/SystemComponentOutputMapModel.h
			 #SystemModels/SystemComponentParameterItemModel.h
			 #SystemModels/SystemComponentParameterMapModel.h
			 #SystemModels/SystemComponentScheduleModel.h
			 #SystemModels/SystemConnectionItemModel.h
			 #SystemModels/SystemConnectionMapModel.h
			 #SystemModels/SystemErrorModel.h
			 #SystemModels/SystemItemModel.h
			 #SystemModels/SystemMapModel.h
			 #SystemModels/SystemModel.h
			 #SystemModels/SystemXMLBaseModel.h
			 #SystemModels/SystemXMLLoadModel.h
			 #SystemModels/SystemXMLSaveModel.h
			 Presenters/AgentConfigurationCombinationPresenter.h
			 Presenters/AgentConfigurationPresenter.h
			 Presenters/AgentMapPresenter.h
			 Presenters/DriverProfilesMapPresenter.h
			 Presenters/DriverProfilesPresenter.h
			 Presenters/ParameterItemPresenter.h
			 Presenters/ParameterMapPresenter.h
			 Presenters/SystemProfilePresenter.h
			 Presenters/VehicleProfilesMapPresenter.h
			 Presenters/VehicleProfilesPresenter.h
			 Views/AgentConfigurationView.h
			 Views/AgentMapView.h
			 Views/DriverProfilesView.h
			 Views/ParameterItemView.h
			 Views/ProfileItemView.h
			 Views/SelectedSystemItemView.h
			 Views/SystemProfileView.h
			 Views/VehicleProfilesView.h
			 Views/WidgetView.h
			../Global/DelegateComboBoxView.h
			../Global/DelegateDoubleView.h
			../Global/DelegateTimeView.h
			../Global/EditDataCommand.h
			 Interfaces/openPASS-AgentConfiguration/AgentConfigurationInterface.h
			 Interfaces/openPASS-AgentConfiguration/AgentItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/AgentMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/DriverProfileItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/DriverProfileMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/ParameterItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/ParameterMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/ProfileMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/SensorItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/SensorMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/SensorProfileItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/SensorProfileMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/SensorProfileParameterItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/SensorProfileParameterMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/VehicleComponentItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/VehicleComponentMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/VehicleComponentProfileItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/VehicleComponentProfileMapInterface.h
			 Interfaces/openPASS-AgentConfiguration/VehicleProfileItemInterface.h
			 Interfaces/openPASS-AgentConfiguration/VehicleProfileMapInterface.h
)


INCLUDE_DIRECTORIES(. Interfaces)

add_definitions(-DAGENT_LIBRARY)

OPENPASS_GUI_add_plugin(AgentConfiguration "")
target_link_libraries(AgentConfiguration openPASSInterfaces Project)
